--- a/home.css
+++ b/home.css
@@ -9,6 +9,8 @@
 body{
     font-family: "Montserrat", sans-serif;
     line-height: 1.5;
+    display: grid;
+    grid-template-columns: 90px 1fr;
 }
 
 a{
@@ -16,14 +18,16 @@ a{
     background-color: transparent;
 }
 
+
+
 .menu-idle{
     position: fixed;
-    z-index: 998;
+    z-index: 996;
     transition: 0.4s;
     width: 90px;
     height: 100%;
-    left: 0;
-    top: 0;
+    left: 0px;
+    top: 0px;
 }
 
 .menu-btn{
@@ -43,11 +47,16 @@ a{
     top: 30px;
 }
 
+
 #menu1{
-    height: 100%;
-    width: 100%;
+    height: 90px;
+    width: 90px;
     cursor: pointer;
-    opacity: 0.5;
+    opacity: 0;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 999;
 }
 
 .menu-social{
@@ -75,9 +84,11 @@ a{
     position: fixed;
     width: 270px;
     height: 100%;
-    top: 0;
-    z-index: 999;
+    top: 0px;
+    left: -270px;
+    z-index: 997;
     transition: 0.3s;
+    background-color: #fff;
 }
 
 .menu-slide header{
@@ -85,10 +96,14 @@ a{
 }
 
 #menu2{
-    height: 100%;
-    width: 100%;
+    height: 90px;
+    width: 90px;
     cursor: pointer;
-    opacity: 0.5;
+    opacity: 0;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 998;
 }
 
 .menu-slide header a{
@@ -107,6 +122,11 @@ a{
     align-items: center;
 }
 
+.menu-slide div ul{
+    margin-top: 225px;
+    text-align: center;
+}
+
 .menu-slide div ul li{
     margin-bottom: 20px;
     list-style: none;
@@ -118,6 +138,108 @@ a{
     font-size: 30px;
 }
 
+.slide-bottom{
+    margin-left: 15px;
+}
+
+.slide-social{
+    text-align: center;
+    margin-top: 115px;
+    padding-left: 15px;
+}
+
+.slide-svg{
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    fill: #b2b2b2;
+    margin-right: 30px;
+    margin-bottom: 10px;
+}
+
+.menu-p{
+    font-size: 15px;
+    color: #636363;
+    line-height: 1.8;
+    margin-bottom: 16px;
+    font-weight: 500;
+    display: inline-block;
+    text-align: center;
+    width: 240px;
+}
+
+.menu-p-a{
+    color: #b2b2b2;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.menu-p-a:hover{
+    color: #2916e0;
+}
+
 #active{
     color: #2916e0;
+}
+
+#menu1:checked{
+    z-index: 0;
+}
+
+#menu1:checked ~ .menu-slide{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+}
+
+#menu1:checked ~ .menu-idle{
+    position: fixed;
+    top: 0px;
+    left: -90px;
+}
+
+/*---------Imagens--------- */
+
+.flex-img{
+    display: flex;
+    height: 100vh;
+    width: 100%;
+}
+
+.imgs{
+    flex-grow: 1;
+    transition: 0.4s;
+    background-color: rgba(0, 0, 0, 0.5);background-blend-mode: multiply;
+    background-size: cover;
+    background-position: 20% 0;
+}
+.imgs:hover{
+    flex-grow: 7;
+    background-color: transparent;
+    transition: 0.4s;
+}
+
+.imgs:hover~#img5{
+    flex-grow: 1;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: 0.4s;
+}
+
+#img1{
+    background-image: url(https://preview.colorlib.com/theme/tulen/img/hero/1.jpg.webp);
+}
+#img2{
+    background-image: url(https://preview.colorlib.com/theme/tulen/img/hero/2.jpg.webp);
+}
+#img3{
+    background-image: url(https://preview.colorlib.com/theme/tulen/img/hero/3.jpg.webp);
+}
+#img4{
+    background-image: url(https://preview.colorlib.com/theme/tulen/img/hero/4.jpg.webp);
+}
+#img5{
+     background-image: url(https://preview.colorlib.com/theme/tulen/img/hero/5.jpg.webp);
+     order: -1;
+     flex-grow: 7;
+     background-color: transparent;
 }
