--- a/home.css
+++ b/home.css
@@ -138,6 +138,11 @@ a{
     font-size: 30px;
 }
 
+.menu-slide div ul li a:hover{
+    color: #2916e0;
+    transition: 0.3s;
+}
+
 .slide-bottom{
     margin-left: 15px;
 }
@@ -209,13 +214,14 @@ a{
 .imgs{
     flex-grow: 1;
     transition: 0.4s;
-    background-color: rgba(0, 0, 0, 0.5);background-blend-mode: multiply;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: multiply;
     background-size: cover;
     background-position: 20% 0;
 }
 .imgs:hover{
-    flex-grow: 7;
-    background-color: transparent;
+    flex-grow: 6;
+    background: linear-gradient(0deg, rgba(0,0,0, 0.8211659664) 0%, rgba(0,0,0,0) 94%);
     transition: 0.4s;
 }
 
@@ -240,6 +246,58 @@ a{
 #img5{
      background-image: url(https://preview.colorlib.com/theme/tulen/img/hero/5.jpg.webp);
      order: -1;
-     flex-grow: 7;
+     flex-grow: 6;
      background-color: transparent;
+}
+
+.imgs:hover .img-extra{
+    opacity: 1;
+    top: 700px;
+    width: auto;
+    height: auto;
+    transition: all 0.4s ease 0.4s;
+}
+
+
+.img-extra{
+    padding-left: 40px;   
+    padding-bottom: 50px;
+    opacity: 0;
+    position: fixed;
+    top: 600px;
+}
+
+.img-tag{
+    display: inline-block;
+    padding: 4px 20px;
+    margin-bottom: 10px;
+    font-size: 12px;
+    background-color: #fff;
+    border-radius: 2px;
+    font-weight: 600;
+    color: #2916e0;
+    text-transform: uppercase;
+    border: transparent;
+}
+
+.img-text{
+    font-size: 60px;
+    font-weight: 700;
+    color: #fff;
+    margin-bottom: 20px;
+    line-height: 1.2;
+}
+
+.img-icon{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    float: left;
+    margin-right: 10px;
+}
+
+.img-author{
+    padding-top: 15px;
+    color: #fff;
+    font-weight: 600;
 }
