--- a/gallery.css
+++ b/gallery.css
@@ -207,48 +207,85 @@ a{
     top: 0px;
     left: -90px;
 }
+/*---------Top Bar--------- */
 
-/*---------Contatos--------- */
-
-.contact{
-    position: absolute;
-    background: #fff;
-    max-width: 1120px;
-    width: 100%;
-    left: calc(50% - 560px);
-    bottom: 87px;
-    padding-top: 40px;
-    text-align: center;
-    border-radius: 8px;
-    box-shadow: 0 0 103px rgba(0, 0, 0, 0.08);
-    display: flex;
-    flex-wrap: wrap;
+.top-bar{
+    padding-top: 30px;
+    padding-right: 74px;
+    padding-left: 210px;
 }
 
-.contact-item{
-    flex: 0 0 33%;
-    max-width: 33%;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-bottom: 35px;
+.bar-tittle{
+    float: left;
+    margin-bottom: 30px;
+    font-size: 24px;
+    font-weight: 600;
+    color: #252525;
+    line-height: 1.2;
 }
 
-.contact-item p{
+.bar-filter{
+    list-style: none;
+    float: right;
+
+}
+
+.filter{
+    display: inline-block;
+    font-size: 18px;
     font-weight: 500;
     color: #252525;
-    font-size: 18px;
-    line-height: 1.8;
+    margin-left: 35px;
 }
 
-.contact-item p span{
-    color: #b2b2b2;
-    font-weight: 400;
-    line-height: 1.8;
+#filter1{
+    position: absolute;
+    top: 32px;
+    right: 595px;
+    width: 24px;
 }
 
-.contact-svg{
-    width: 48px;
-    height: 48px;
-    fill: #2916e0;
-    margin-bottom: 20px;
+#filter2{
+    position: absolute;
+    top: 32px;
+    right: 475px;
+    width: 84px;
 }
+
+#filter3{
+    position: absolute;
+    top: 32px;
+    right: 375px;
+    width: 64px;
+}
+
+#filter4{
+    position: absolute;
+    top: 32px;
+    right: 270px;
+    width: 64px;
+}
+
+#filter5{
+    position: absolute;
+    top: 32px;
+    right: 165px;
+    width: 66px;
+}
+
+#filter6{
+    position: absolute;
+    top: 32px;
+    right: 75px;
+    width: 54px;
+}
+
+input[type="radio"]{
+    opacity: 0;
+    cursor: pointer;
+    height: 27px;
+}
+input[type="radio"]:checked+.filter{
+    color: #2916e0;
+}
+/*---------Gallery--------- */
