--- a/blog.css
+++ b/blog.css
@@ -212,134 +212,17 @@ img{
     top: 0px;
     left: -90px;
 }
-/*---------Top Bar--------- */
 
-.top-bar{
-    padding-top: 30px;
-    padding-right: 74px;
-    padding-left: 210px;
-    height: 88.8px;
+#blog-icon{
+    text-align: center;
+    vertical-align: middle;
 }
 
-.bar-tittle{
-    float: left;
-    margin-bottom: 30px;
-    font-size: 24px;
-    font-weight: 600;
-    color: #252525;
-    line-height: 1.2;
-}
-
-.bar-filter{
-    list-style: none;
-    float: right;
-
-}
-
-.filter{
-    display: inline-block;
-    font-size: 18px;
-    font-weight: 500;
-    color: #252525;
-    margin-left: 35px;
-}
-
-#filter1{
-    position: absolute;
-    top: 32px;
-    right: 595px;
-    width: 24px;
-}
-
-#filter2{
-    position: absolute;
-    top: 32px;
-    right: 475px;
-    width: 84px;
-}
-
-#filter3{
-    position: absolute;
-    top: 32px;
-    right: 375px;
-    width: 64px;
-}
-
-#filter4{
-    position: absolute;
-    top: 32px;
-    right: 270px;
-    width: 64px;
-}
-
-#filter5{
-    position: absolute;
-    top: 32px;
-    right: 165px;
-    width: 66px;
-}
-
-#filter6{
-    position: absolute;
-    top: 32px;
-    right: 75px;
-    width: 54px;
-}
-
-input[type="radio"]{
-    opacity: 0;
-    cursor: pointer;
-    height: 27px;
-}
-input[type="radio"]:checked+.filter{
+.blog-advertise{
     color: #2916e0;
+    font-size: 60px;
 }
 
-input[type="radio"]:hover+.filter{
-    color: #2916e0;
-    transition: 0.3s;   
-}
-/*---------Gallery--------- */
-
-.gallery{
-    display: grid;
-}
-
-.gallery-item{
-    padding: 0 5px;
-    margin-bottom: 10px;
-    width: 20%;
-    position: relative;
-}
-
-.gal-flex{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.gallery-itembig{
-    width: 40%;
-    padding: 0 5px;
-    margin-bottom: 10px;
-}
-
-.author{
-    display: flex;
-    align-items: center;
-    color: #fff;
-    position: absolute;
-    left: 30px;
-    bottom: 55%;
-    transition: all 0.4s ease 0s;
-}
-
-.img-icon{
-    border-radius: 50%;
-    padding-right: 10px;
-}
-
-#gallery1, #gallery2, #gallery3, #gallery4, #gallery5, #gallery6, #gallery7, #gallery8, #gallery9, #gallery10, #gallery11{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+#blog-page{
+    width: 1000px;
 }
